--- a/AI_notes.tex
+++ b/AI_notes.tex
@@ -16,6 +16,9 @@
 \date{29 February 2022}
 
 \begin{document}
+\setlength{\abovedisplayskip}{3pt}
+\setlength{\belowdisplayskip}{3pt}
+
 \frontmatter
 \TitlePage
 \tableofcontents
@@ -25,19 +28,13 @@
 \include{Contents/ai-intro.tex}
 \include{Contents/ml-intro.tex}
 \include{Contents/probabilities.tex}
-\include{Contents/linear-regression.tex}
-\include{Contents/logistic-regression.tex}
-\include{Contents/svm.tex}
-\include{Contents/ensembles.tex}
+\include{Contents/basic-ml-prob.tex}
+\include{Contents/feature-engineering.tex}
 \include{Contents/error-functions.tex}
-\include{Contents/gradient-descent.tex}
-\include{Contents/nn-tips.tex}
+\include{Contents/neural-network.tex}
 \include{Contents/word-embeddings.tex}
-\include{Contents/search-algorithms.tex}
 \include{Contents/variational-autoencoders.tex}
-\include{Contents/MDP.tex}
-\include{Contents/RL.tex}
-\include{Contents/probabilistic-robotics.tex}
+\include{Contents/generative-models.tex}
 
 \backmatter
 \pagenumbering{Roman}
