--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -17,19 +17,26 @@
 	\acro{algor}[algor.]{algorithms}
 	\acro{info}[info.]{information}
 	\acro{aka}[a.k.a.]{also known as}
+	\acro{wrt}[w.r.t.]{with regard to}
 	\acro{no}[no.]{number of}
 	\acro{func}[func.]{function}
 	\acro{vs}[vs.]{versus}
+	\acro{freq}[freq.]{frequency}
 	\acro{iid}[i.i.d.]{independent \& identically distributed}
+	\acro{st}[s.t.]{subject to}
+	
 	\acro{LSI}{linear shift invariant}
 	
-	\acro{pdf}[PDF]{Probability Density Function}
+	\acro{pdf}[pdf.]{Probability Density Function}
 	\acro{MLE}{Maximum Likelihood Estimation}
 	\acro{MAP}{Maximum A Posteriori}
 
 	\acro{MoG}{Mixture of Gaussians}
+	\acro{SVM}{State Vector Machine}
 	
 	% Gradient descent
+	\acro{GD}{Gradient Descent}
+	\acro{SGD}{Stochastic Gradient Descent}
 	\acro{nag}[NAG]{Nestorov Accelerated Gradient}
 	\acro{rmsprop}[RMSprop]{Root mean squared prop}
 	\acro{adam}[Adam]{Adaptive moment estimation}
@@ -37,8 +44,51 @@
 	\acro{SVD}{Singular Value Decomposition}
 	\acro{PCA}{Principal Component Analysis}
 	\acro{LDA}{Linear Discriminant Analysis}
-	\acro{kl}[K-L]{Kullback–Leibler}
+	\acro{KL}[K-L]{Kullback–Leibler}
+	
+	% Mathematics & Optimization
+	\acro{KKT}{Karush-Kuhn-Tucker}
+	\acro{RBF}{Radial basic function}
+	\acro{iff}[i.f.f.]{if and only if}
+	\acro{LP}{Linear Programming}
+	\acro{QP}{Quadratic Programming}
+	\acro{LQR}{Linear Quadratic Regulator}
+	\acro{iLQR}{Iterative Linear Quadratic Regulator}
+	\acro{MPC}{Model Predictive Control}
+	\acro{FLM}{Fitted Local Model}
 	
 	% Neural-network-related term
 	\acro{relu}[ReLU]{Rectified Linear Unit}
+	\acro{BPTT}{Backpropagation through time}
+	\acro{RNN}{Recurrent Neural Network}
+	\acro{CNN}{Convolutional Neural Network}
+	\acro{VAE}{Variational Auto-Encoders}
+	
+	
+	% Probabilistic Robotics
+	\acro{KF}{Kalman Filter}
+	\acro{EKF}{Extended Kalman Filter}
+	\acro{IF}{Information Filter}
+	\acro{EIF}{Extended Information Filter}
+	\acro{MHEKF}{Multi-Hypothesis Extended Kalman Filter}
+	
+	% Reinforcement learning related
+	\acro{MDP}{Markov Decision Process}
+	\acro{POMDP}{Partially Observable Markov Decision Process}
+	\acro{TSP}{Travelling Salesman Problem}
+	\acro{A3C}{Asynchronous advantage actor-critic}
+	\acro{SAC}{Soft actor-critic}
+	\acro{DQN}{Deep Q-learning}
+	\acro{DDP}{Differential Dynamic Programming}
+	\acro{dagger}[DAgger]{Dataset Aggregation}
+	\acro{CEM}{Cross-entropy Method}
+	\acro{MCTS}{Monte-Carlo Tree Search}
+	\acro{MBA}{Model-based Acceleration}
+	\acro{MVE}{Model-based Value Expansion}
+	\acro{MBPO}{Model-based Policy Optimization}
+	\acro{UCB}{Upper Confidence Bounce}
+	
+	% Computer vision related
+	\acro{DPM}{Deformable Part Model}
+	\acro{HOG}{Histogram of Oriented Gradients}
 \end{acronym}
