--- a/Contents/error-functions.tex
+++ b/Contents/error-functions.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 \chapter{Error Functions}
-As mention in \secref{sec:model-param-loss}, the loss function is the metric to assess the performance of the \ac{ML} model with a certain task. Different loss functions fit with different tasks. Sometimes, the design of the loss function is what makes the differences.
+As mention in \secref{sec:model-param-loss}, the loss function is the metric to assess the performance of the \ac{ML} model with a certain task. Different loss functions fit with different tasks. In many cases, the design of the loss function is what makes the differences.
 
 \todo{Add graph and explanation}
 
