--- a/Contents/math-for-cv.tex
+++ b/Contents/math-for-cv.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \chapter{Mathematics Backgrounds}
 \label{cha:math-cv}
-This chapter presents some mathematics backgrounds for later problems.
+This chapter presents some mathematics backgrounds.
 
 \section{The Matrix Equation}
 \hlb{Problem:} Solve $Ax=0$
