--- a/Contents/probabilities.tex
+++ b/Contents/probabilities.tex
@@ -2,148 +2,42 @@
 \chapter{Probabilities}
 \label{cha:probabilities}
 
-\section{Definitions}
-\label{sec:prob-defs}
-
-\subsection{Basic Definitions}
+Many \ac{ML} algorithms and problems concern with the \ac{prob} or \ac{pdf} of the outputs from complex inputs. We all aware of some basic examples of the output \ac{prob} from simple inputs, \eg, flipping a coin, rolling a dice. With these simple inputs, due to uncertainty, one could only say about the \ac{prob} that the output could be, \eg, flipping a coin has 50\% of getting head, 50\% of getting tail. Comparing to flipping a coin, inputs for \ac{ML} algorithms are usually more complex, in higher dimensions, in different modals, \etc. The inputs can be datasets, images, audio, \etc. However, as with the simple inputs, we concern ourselves with the \ac{prob} of the outputs, \eg:
 \begin{itemize}
-	\item If $x$ is discrete: $\underset{x}{\sum} p(x) = 1$ with $\forall$ $0 \leq p(x) \leq 1$
-	\item If $x$ is continuous: $\displaystyle \int p(x) \,dx = 1 \Rightarrow \exists$ a \textbf{\ac{pdf}}\\
-	$p(x)$ can take any positive value, as long as \(\displaystyle \int p(x) \,dx = 1\)\\
-	\todo{Add image}\\
-	\note: theoretically $p(x) = 0, \forall x$
-	\item Common types
-	\begin{align*}
-		& \text{Joint probability:} 		&& p(x_i, y_i) 	&& \left(= p(X=x_i, Y=y_i)\right) \\
-		& \text{Marginal probability:} 		&& p(x_i) 		&& \left(= p(X=x_i)\right) \\
-		& \text{Conditional probability:} 	&& p(y_i | x_i) && \left(= p(Y=y_i|X=x_i)\right)
-	\end{align*}	
-	\item Sum rule: $\displaystyle \sum$ joint \ac{prob} = marginal \ac{prob}\\
-	$\Rightarrow$ Marginalization	
-	\begin{itemize}
-		\item discrete variable: $\displaystyle p(x)=\underset{y}{\sum} p(x, y)$
-		\item continuous variable: $\displaystyle p(x) = \int p(x,y) dy$
-	\end{itemize}
-	\item Product rule: Product of marginal \ac{prob} and conditional \ac{prob} = joint \ac{prob}
+	\item Given a dog image, output the \ac{prob} of the breed of the dog.
+	\item Image segmentation: given an image, output the \ac{prob} of object class for each pixel.
+	\item Cancer detection: given a medical image, output the \ac{prob} of the patient having cancer.
 \end{itemize}
+This chapter presents important \ac{prob} problems relating to \ac{ML}. For mathematics foundation on \ac{prob}, check the mathematics notes.
 
-\subsection{Independence and Variability}
-\begin{itemize}
-	\item Independence. \Eg: $x, y$ are independent, then
-	\[\begin{cases}
-		p(x|y) = p(x)\\
-		p(y|x) = p(y)
-	\end{cases}
-	\iff p(x,y) = p(x).p(y)\]
-	
-	\item Variability
-	\begin{itemize}
-		\item variance:\\ $var \left[f\right] = \expectation{\left(f(x)-\expectation{f(x)}\right)^2} = \expectation{f(x)^2} - \expectation{f(x)}^2$
-		\item covariance:\\ $cov \left[x, y\right] = \mathbb{E}_{x,y}\left[xy\right] - \expectation{x}.\expectation{y} = \mathbb{E}_{x,y}\left[xy^T\right] - \expectation{x}.\expectation{y^T}$
-		\item covariance matrix
-	\end{itemize}
-\end{itemize}
-
-\subsection{Bayes Rule}
-\label{subsec:bayes-rule}
-\begin{align*}
-	& p(x_i|y_i).p(y_i) = p(y_i|x_i).p(x_i) = p(x_i, y_i) \\
-	\Rightarrow\; &p(y_i|x_i) = \frac{p(x_i|y_i).p(y_i)}{p(x_i)} = \frac{p(x_i|y_i).p(y_i)}{\underset{y}{\sum} p(x_i|y_i).p(y_i)}
-\end{align*}
-$\Rightarrow$ the \hlb{Bayes equation}:\\~\\
-\hlre{posterior = \frac{likelihood \times prior}{normalization~factor}}
-
-\subsection{Expectation}
-\label{subsec:expectation}
-\begin{align*}
-	& \text{For variable $x$:} && \expectation{x} = \underset{x}{\sum}x.p(x) && \left( = \int x.p(x)dx \right)\\
-	& \text{For function $f(\cdot)$:} && \expectation{f(x)} = \underset{x}{\sum}f(x).p(x) && \left( = \int f(x).p(x)dx \right)
-\end{align*}
-
-\section{Types of Probability Distributions}
-Reference source: \href{https://machinelearningcoban.com/2017/07/09/prob/}{machinelearningcoban.com}.
-\subsection{Bernoulli Distribution}
-Bernoulli Distribution is a distribution to describe binary discrete variables. It's the case that the variable can only take value in 2 classes $x \in \{0,1\}$. \Eg, the probability of throwing a coin. The Bernoulli distribution is defined with parameter $\lambda \in[0,1]$:
-\begin{equation}
-	p(x) = \text{Bern}_x[\lambda] = \begin{cases}
-		p(x=1) = \lambda\\
-		p(x=0) = 1-\lambda
-	\end{cases}
-\end{equation}
-In short form, the above equation can be combined into one:
-\begin{equation}
-	p(x) = \lambda^x(1-\lambda)^{(1-x)} \Rightarrow
-	\begin{cases}
-		p(0) = \lambda^0 (1-\lambda)^1 = 1-\lambda \\
-		p(1) = \lambda^1 (1-\lambda)^0 = \lambda \\
-	\end{cases}
-\end{equation}
-
-\subsection{Categorical Distribution}
-\label{subsec:categorical-distribution}
-\textit{Categorical Distribution} is the generalization of \textit{Bernoulli Distribution}, in case there are $K$ classes for the discrete variable $x \in \{ 1, 2, \dots, K\}$. Accordingly, there will be $K$ parameters to describe this \ac{pdf}: $\lambda = [\lambda_1, \lambda_2, \dots, \lambda_K]$, with $\lambda_k \geq 0$ and $\sum \lambda_k = 1$. Each $\lambda_k$ represents the probability to take the output $k$: $p(x = k) = \lambda_k$. In short: $p(x) = \text{Cat}_x [\lambda]$.
-
-Another common way to represent the output is the one-hot vector, $\mathbf{x} \in \{\mathbf{e}_1, \mathbf{e}_2, \dots, \mathbf{e}_K\}$ with $\mathbf{e}_k$ is the $k$-unit vector, which has all 0-element, except the $k$-element equal to 1. \Eg, given 3 classes: $\textbf{e}_1 = [1, 0, 0]^T, \textbf{e}_2 = [0, 1, 0]^T, \textbf{e}_3 = [0, 0, 1]^T$. We will then have:
-\begin{equation}
-	p(\mathbf{x} = \mathbf{e}_k) = \prod_{j=1}^K \lambda_j^{x_j} = \lambda_k
-\end{equation}
-because for $\textbf{x}=\textbf{e}_k$, only $x_k=1$, while $x_j = 0, \forall j\neq k$.
-
-\subsection{Univariate Normal Distribution}
-Univariate Normal Distribution is also known as the Gaussian distribution. For single dimension data (in 1D): $x \in (-\infty, \infty)$, the mean $\mu \in \mathbb{R}$, and the variance $\sigma^2$ with $\sigma \in \mathbb{R}$.
-\begin{equation}
-	p(x) = \text{Norm}_x\left[\mu, \sigma^2\right] = \mathcal{N}(\mu, \sigma^2) = \frac{1}{\sqrt{2\pi\sigma^2}}.\text{exp}\left(-\frac{(x-\mu)^2}{2\sigma^2}\right)
-\end{equation}
-\note
-\begin{itemize}
-	\item \hlr{Marginals \ac{prob} of Gaussian are again Gaussian.}
-	\item When estimating the \ac{param} of a Gaussian, beware the underestimation problem.
-	\begin{align*}
-		\expectation{\mu_{ML}} &= \mu \\
-		\expectation{\sigma^2_{ML}} &= \left(\frac{N-1}{N}\right)\sigma^2 \\
-		\Rightarrow \overset{\sim}{\sigma}^2 &= \left(\frac{N}{N-1}\right)\sigma^2_{ML} = \frac{1}{N-1} \sum_{n=1}^{N} (x_n-\hat{\mu})^2
-	\end{align*}
-\end{itemize}
-\begin{figure}[hbt!]
-	\centering
-	\includegraphics[width=0.7\textwidth]{gaussian-pdf.png}
-	\caption{Bivariate Gaussian distribution (\href{https://stats.stackexchange.com/questions/102632/plot-two-dimensional-gaussian-density-function-in-matlab}{src}).}
-	\label{fig:relation-ai-ml-dl}
-\end{figure}
-
-\subsection{Multivariate Normal Distribution}
-\textit{Multivariate Normal Distribution} is the extension of \textit{Univariate Normal Distribution} to multi-dimensional data: $\textbf{x}, \boldsymbol{\mu} \in \mathbb{R}^D, \sigma^2 \Rightarrow \Sigma \in \mathbb{S}^D_{++}$ ($\mathbb{S}^D_{++}$ is the set of positive definite symmetric matrix)
-\begin{equation}
-	p(x) = \text{Norm}_x [\boldsymbol{\mu}, \Sigma] = \mathcal{N}(\boldsymbol{\mu}, \Sigma) = \frac{1}{2\pi^{D/2}| \Sigma|^{\frac{1}{2}}} . \text{exp} \left( -\frac{1}{2} {(\textbf{x} - \boldsymbol{\mu})^T \Sigma^{-1} (\textbf{x} - \boldsymbol{\mu})} \right)
-\end{equation}
-
-\subsection{Beta Distribution}
-This distribution describes the parameter for another distributions. \Eg, Dirichlet \ac{pdf} describes Categorical Distribution (\subsecref{subsec:categorical-distribution})
+\todo{Add image: image with \ac{prob} of being cat or dog}
 
 \section{Parameter Estimation}
-Many of \ac{ML} problems are boiled down to finding \textit{statistical models}. Those models could predict the \ac{prob} for the classification problem, \ac{prob} of events that will happen, \etc. It all end up with finding the suitable set of \ac{param} for these \textit{statistical models}.
+Many of \ac{ML} problems are boiled down to finding \textit{statistical models}. Those models predict the \ac{prob} of the data belongs to one class (in classification problem), \ac{prob} of events that will happen, \etc. It all end up with finding a suitable set of \ac{param} for these \textit{statistical models}.
+
 \subsection{Maximum Likelihood Estimation}
+\label{subsec:mle}
 \ac{MLE} finds the parameters that maximize the \ac{prob} of the existing data.
 \begin{align}
-	& &&\theta = \underset{\theta}{\text{argmax}}\:p(x_1, x_2, \dots, x_N | \theta) \\
-	&\text{Assuming independent variables:} &&\theta = \underset{\theta}{\text{argmax}} \prod^N_{n=1} p(x_n | \theta) \\
-	&\text{Maximum log-likelihood:} &&\theta = \underset{\theta}{\text{argmax}} \sum^N_{n=1} \left[\text{log}\:p(x_n | \theta) \right]\\
-	&\text{Minimum negative log-likelihood:} && \theta = \underset{\theta}{\text{argmin}} \sum^N_{n=1} \left[-\text{log}\:p(x_n | \theta)\right]
+	&\text{Model parameter $\theta$:} &&\theta = \underset{\theta}{\arg\max}\:p(x_1, x_2, \dots, x_N | \theta) \\
+	&\text{Assuming independent variables:} &&\theta = \underset{\theta}{\arg\max} \prod^N_{n=1} p(x_n | \theta) \\
+	&\text{Maximum log-likelihood:} &&\theta = \underset{\theta}{\arg\max} \sum^N_{n=1} \left[\text{log}\:p(x_n | \theta) \right]\\
+	&\text{Minimum negative log-likelihood:} && \theta = \underset{\theta}{\arg\min} \sum^N_{n=1} \left[-\text{log}\:p(x_n | \theta)\right]
 \end{align}
 
 \subsection{Maximum A Posteriori}
-Sometimes, we have prior knowledge of the \ac{pdf}. \Eg, we know that the \ac{prob} of getting head when flipping a coin is around 50\%. \ac{MAP} takes advantage of the prior knowledge $p(\theta)$ on the parameters $\theta$ by applying Bayes rule (\subsecref{subsec:bayes-rule})
+Sometimes, prior knowledge of the \ac{pdf} is presented. \Eg, the \ac{prob} of getting head when flipping a coin is around 50\%. \ac{MAP} takes advantage of the prior knowledge $p(\theta)$ on the parameters $\theta$ by applying Bayes rule.
 \begin{equation}
-	\theta = \underset{\theta}{\text{argmax}} \prod^N_{n=1} p(x_n | \theta)p(\theta)
+	\theta = \underset{\theta}{\arg\max} \prod^N_{n=1} p(x_n | \theta)p(\theta)
 \end{equation}
-\hlr{\ac{MLE} suffers when there is not enough data} $\Rightarrow$ \hlr{use \ac{MAP}}
+\hlr{\ac{MLE} (\secref{subsec:mle}) suffers when there is not enough data} $\Rightarrow$ \hlr{use \ac{MAP}}
 
 \section{Naive Bayes Classifier}
-Naive implies having the independence assumption on the variables.
-\begin{align*}
-	c 	&= \underset{c \in \mathbb{C}}{\text{argmax}}\:p(c|x)\\
-		&= \underset{c \in \mathbb{C}}{\text{argmax}}\:p(x|c)\,p(c)
-\end{align*}
+The word \textit{naive} implies having the independence assumption on the variables.
+\begin{align}
+	c 	&= \underset{c \in \mathbb{C}}{\arg\max}\ p(c|x)\\
+		&= \underset{c \in \mathbb{C}}{\arg\max}\ p(x|c)\,p(c)
+\end{align}
 
 If $x$ is:
 \begin{itemize}
@@ -155,20 +49,54 @@ If $x$ is:
 Minimize the expected loss: $\displaystyle \expectation{L} = \sum_{k}\sum_{j}\int_{R_j}L_{kj}\,p(x, C_k)\,dx$ by choosing region $R_j$ such that $\displaystyle \expectation{L} = \sum_kL_{kj}\,p(C_k| x)$
 
 \section{Views on the Decision Problem}
-\subsection{\hlr{Generative Methods}}
+\subsection{Generative Methods}
 First determine the class-conditional densities and separately infer the prior class \ac{prob} $\Rightarrow$ Bayes theorem $\Rightarrow$ class membership
 \[p(x|C_k)\,p(C_k) \Rightarrow y_k(x)\]
 \Eg, Mixture of Gaussians
 
-\subsection{\hlr{Discriminative Methods}}
+\subsection{Discriminative Methods}
 First solve the inference problem of determined the posterior class \ac{prob}
 
-\section{Unknown Notes}
+\subsection{Classification with Loss Functions}
+For classification problem with more than 2 classes, the output's predicted class $\mathcal{C}_k$ is the one with the greatest posterior \ac{prob} among all classes $\mathcal{C}_j$, which can still be wrong:
+\begin{align*}
+	p(\mathcal{C}_k|x) &> p(\mathcal{C}_j|x) && \forall j \neq k && && \\
+	p(x|\mathcal{C}_k)p(\mathcal{C}_k) &> p(x|\mathcal{C}_j)p(\mathcal{C}_j) && \forall j \neq k && &&
+\end{align*}
+Loss function differentiate the possible decisions and the possible true classes. \Eg:
+\begin{itemize}
+	\item Decisions: \textit{sick} or \textit{healthy}
+	\item Classes: patient is \textit{sick} or \textit{healthy}
+\end{itemize}
+The cost may be symmetric. In this case however, it is asymmetric:
+\[\text{\textit{loss(decision=healthy | patient=sick)}} >> \text{\textit{loss(decision=sick | patient=healthy)}} \]
+The classification problem could be formalized by introducing loss matrix $L_{kj}$
+\[ L_{kj} =$ \textit{loss for decision} $\mathcal{C}_j$ \textit{if truth is} $\mathcal{C}_k \]
+\Eg, cancer diagnosis:
+\[L_{cancer\;diagnosis} = \begin{matrix}
+	  & & \textbf{Decision}\\
+	  & & \begin{matrix}
+	  		cancer & normal
+	  \end{matrix}\\
+  	\textbf{Truth} & \begin{matrix}
+  		cancer \\ normal
+  	\end{matrix} & \begin{pmatrix}
+		0 & 1000\\
+		1 & 0
+	\end{pmatrix}
+\end{matrix}\]
+Loss functions maybe different for different actors:
+\[ L_{stocktrader}(subprime) \neq L_{bank}(subprime)\]
+
+\subsection{Minimize the Expected Loss}
+But regardless, the optimal solution is the one that minimizes the \textit{expected loss}. It is \textit{expected} loss because it depends on the true class, which is unknown.\\
+$\Rightarrow$ \hlb{Minimize the expected loss}
+
 \Eg, 2 class $C_1, \; C_2$, 2 decisions $\alpha_1, \; \alpha_2$.
 
 The loss: $L(\alpha_j | C_k) = L_{kj}$.
 
-The expected loss is equal to the $Risk(R)$.
+The expected loss is equal to the risk $R$.
 \begin{align*}
 	\mathbb{E}_{\alpha_1}[L] = R(\alpha_1|x) = L_{11}\,p(C_1|x) + L_{21}\,p(C_2|x)\\
 	\mathbb{E}_{\alpha_2}[L] = R(\alpha_2|x) = L_{12}\,p(C_1|x) + L_{22}\,p(C_2|x)\\
@@ -179,9 +107,15 @@ Choose $\alpha_1$ if $R(\alpha_1|x) < R(\alpha_2|x)$
 
 \section{Probability Density Estimation}
 \label{cha:pdf-estimation}
+The following approaches' aim is to estimate an unknown \ac{pdf}.
+\begin{itemize}
+	\item \hlb{Non-parametric approaches:} represent the \ac{pdf} without parameter, usually as a lookup table. Using lookup table is fast, but could also be memory-consuming.\\
+	Among the presented ones, only histogram is non-parametric.
+	\item \hlb{Parametric approaches:} within sufficiently small region $\mathcal{R}$, the \ac{prob} can be estimated as $\displaystyle p = \int_{\mathcal{R}}p(y)dy \approx p(x)V = \frac{K}{N.V}$, where $K$ is the number of data points in the region, $V$ is the volume of the region.
+\end{itemize}
 
 \subsection{Histogram}
-This is \hlb{non-parametric} \ac{prob} density estimation. All other approaches are \hlb{parametric}. The \ac{prob} of a bin:
+The \ac{prob} of a bin:
 \begin{equation}
 	p_i = \frac{n_i}{N.\Delta_i}
 \end{equation}
@@ -195,16 +129,12 @@ in which $n_i$ is the number of data points in that bin, $N$ is the total number
 \end{itemize}
 \begin{figure}[hbt!]
 	\centering
-	\includegraphics[width=0.4\textwidth]{histogram.png}
+	\includegraphics[width=0.25\textwidth]{histogram.png}
 	\caption{Example of a histogram, $\Delta = 1$ (\href{https://en.wikipedia.org/wiki/Histogram}{src}).}
 \end{figure}
 
-\subsection{Parametric Probability Density Estimation}
-In the other hands, one could find the \ac{prob} from $\displaystyle p = \int_{\mathcal{R}}p(y)dy \approx p(x)V$ where the region $\mathcal{R}$ is sufficiently small.\\
-$\displaystyle \Rightarrow p(x) \approx \frac{K}{N.V}$, where $K$ is the number of data points in the region, $V$ is the volume of the region.
-
 \subsection{Kernel Methods}
-The kernel methods fix $V$ and determine $K$. The volume $V$ is the space restricted within a parzen window $k(u)$ that satisfies $k(u) \geq 0$.
+The kernel methods fix the volume $V$ and determine the number of data points $K$. The volume $V$ is the space restricted within a parzen window $k(u)$ that satisfies $k(u) \geq 0$.
 \begin{align}
 	&\text{A hyper-space cube:} && k(u) = \begin{cases}
 		1\;\; if \;\; |u_i| \leq \frac{1}{2}h, \;\; i = 1, 2, \dots, D \\
@@ -214,7 +144,8 @@ The kernel methods fix $V$ and determine $K$. The volume $V$ is the space restri
 	&\text{The region \textit{volume}:} &&V = \int k(u) du = h^D\\
 	&\text{The probability:} && \Rightarrow p(x) \approx \frac{K}{N.V} = \frac{1}{N.h^D}\sum_{n=1}^{N}k(x-x_n)
 \end{align}
-The \hlb{symmetric Gaussian kernel is a better substitution} for the asymmetric parzen window.
+\note the above parzen window is asymmetric.\\
+The \hlb{symmetric Gaussian kernel is a better substitution}.
 \begin{align}
 	&\text{A Gaussian kernel:} && k(u) = \frac{1}{\sqrt{2\pi h^2}}\:exp\left(\frac{-u^2}{2h^2}\right) \\
 	&\text{The region \textit{volume}:} &&V = \int k(u) du = 1 \\
@@ -227,9 +158,33 @@ Generalization: $k(u) \geq 0$, $\displaystyle \int k(u)du = 1$.
 \hlr{Size of the hypersphere is proportional to $h^2$.}
 
 \subsection{K-Nearest Neighbor}
-When you fix $K$ and determine $V$, it leads to K-Nearest Neighbor.
-
-\todo{Add image}
+When you fix the number of data points $K$ and determine the volume $V$, it leads to K-Nearest Neighbor.
+\begin{figure}[!hbt]
+	\centering
+	\begin{tikzpicture}
+		\draw[red,thick](1,3) circle (.7);
+		\fill[black] (.47,3.2) circle (0.1);
+		\fill[black] (1.1,3.5) circle (0.1);
+		\fill[black] (1,2.5) circle (0.1);
+		\draw[red,thick](4,3.2) circle (.5);
+		\fill[black] (4.3,3) circle (0.1);
+		\fill[black] (4,3.5) circle (0.1);
+		\fill[black] (3.8,2.9) circle (0.1);
+		\draw[red,thick](2.5,2.5) circle (0.25);
+		\fill[black] (2.6,2.6) circle (0.1);
+		\fill[black] (2.6,2.4) circle (0.1);
+		\fill[black] (2.4,2.5) circle (0.1);
+		\draw[red,thick](1.5,1.2) circle (0.4);
+		\fill[black] (1.7,1.4) circle (0.1);
+		\fill[black] (1.3,1) circle (0.1);
+		\fill[black] (1.35,1.35) circle (0.1);
+		\draw[red,thick](3,1) circle (0.3);
+		\fill[black] (3.1,1.1) circle (0.1);
+		\fill[black] (2.82,1) circle (0.1);
+		\fill[black] (3,.8) circle (0.1);
+	\end{tikzpicture}
+	\caption{K-Nearest Neighbor with $K=3$.}
+\end{figure}
 
 \begin{equation}
 	p(x) \approx \frac{K}{NV}
@@ -242,38 +197,36 @@ Here, $K$ is the \hlb{smoothing factor}.
 	\end{itemize}
 	$\Rightarrow$ combine parametric methods to a mixture model}
 
-\hlr{Mixture distribution = multi parametric model}
+\hlr{Mixture distribution = multi-parametric model}
 
 \subsection{Mixture of Gaussians}
-\ac{MoG}, as \hlr{Generative Model}, is defined from the \ac{prob} sum of elemental Gaussians: $\displaystyle p(x|\theta) = \sum_{j=1}^{M}p(x|\theta_j)p(j)$, where $p(x|\theta_j)$ is a \hlr{mixture component}, $p(j) = \pi_j$ is the \hlr{weight of the component}
+\ac{MoG}, as \hlr{Generative Model}, is defined from the sum \ac{prob} of elemental Gaussians: $\displaystyle p(x|\theta) = \sum_{j=1}^{M}p(x|\theta_j)p(j)$, where $p(x|\theta_j)$ is a \hlr{mixture component}, $p(j) = \pi_j$ is the \hlr{weight of the component}
 \begin{align}
-	p(x|\theta_j) &= \frac{1}{\sqrt{2\pi}\sigma_j}\:exp\left[\frac{-(x-\mu_j)^2}{2\sigma_j^2}\right],\;\;p(j)=\pi_j, \;\;\sum\pi_j=1 \\
-	p(x|\theta_j) &= \frac{1}{(2\pi)^{\frac{D}{2}}|\Sigma_j|^{\frac{1}{2}}}\:exp\left[-\frac{1}{2}(x-\mu_j)^T\Sigma_j^{-1}(x-\mu_j)\right]
+	p(x|\theta_j) &= \frac{1}{\sqrt{2\pi}\sigma_j}\:\exp\left[\frac{-(x-\mu_j)^2}{2\sigma_j^2}\right],\;\;p(j)=\pi_j, \;\;\sum\pi_j=1 \\
+	p(x|\theta_j) &= \frac{1}{(2\pi)^{\frac{D}{2}}|\Sigma_j|^{\frac{1}{2}}}\:\exp\left[-\frac{1}{2}(x-\mu_j)^T\Sigma_j^{-1}(x-\mu_j)\right]
 \end{align}
 
 \subsection{K-Means Clustering}
-There are 3 steps:
-\begin{itemize}
+There are 3 steps. Step 2 and 3 are repeated until there is no change.
+\begin{enumerate}
 	\item Pick $K$ centroids
 	\item Assign sample to the centroid
 	\item Adjust centroids
+\end{enumerate}
+\note Check \href{https://machinelearningcoban.com/2017/01/01/kmeans/}{machinelearningcoban.com}.
+\begin{itemize}
+	\item This leads to a local optimum, depends on initialization.
+	\item It's sensitive to \hlb{outliers}, detects \hlb{spherical clusters only}.
+	\item Application: \eg, image compression.
 \end{itemize}
 
-Step 2 and 3 are repeated until there is no change.
-
-This leads to a local optimum, depends on initialization. It's sensitive to \hlb{outliers}, detects \hlb{spherical clusters only}.
-
-\todo{Add images}
-
-Application: \eg, image compression.
-
 \subsection{EM Clustering}
-It's short for Expectation-Maximization. Assuming $N$ data points and $K$ Gaussians.
+Assuming $N$ data points and $K$ Gaussians.
 \begin{itemize}
-	\item \textbf{E-Step:} Fix the Gaussians, find $\gamma_j(x)$, which represent the \hlr{responsibility of component $j$ for $x$}.
+	\item \textbf{E-Step:} Fix the Gaussians, find $\gamma_j(x)$, which represent the \hlr{responsibility of component $j$ for data point $x$}.
 	\begin{equation}
 		\gamma_j(x_n) = \frac{\pi_j \mathcal{N}\left(x_n|\mu_j,\Sigma_j\right)}
-		{\sum_{k=1}^{K}\pi_k \mathcal{N}\left(x_n|\mu_k,\Sigma_k\right)} \;\;\forall j=1, 2, \dots, K, \;\; n=1, 2, \dots, N
+		{\sum_{k=1}^{K}\pi_k \mathcal{N}\left(x_n|\mu_k,\Sigma_k\right)} \tab \forall j=1, 2, \dots, K, \;\; n=1, 2, \dots, N
 	\end{equation}	
 	\item \textbf{M-Step:} Fix $\gamma_j(x)$, update the Gaussians.
 	\begin{align}
@@ -285,10 +238,13 @@ It's short for Expectation-Maximization. Assuming $N$ data points and $K$ Gaussi
 \end{itemize}
 \hlb{Notes}:
 \begin{itemize}
+	\item EM is short for Expectation-Maximization
 	\item Regularization with $\Sigma + \sigma_{min}I$
 	\item Initialization $\mu_j$ with K-Means
-	\item Hard-assignment: each data point to 1 class $\Rightarrow$ K-Means
-	\item Soft-assignment: each data point $\Rightarrow$ \ac{prob} to fall into many classes $\Rightarrow$ EM Clustering
+	\item Compare with K-Means
+	\begin{itemize}
+		\item Hard-assignment $\Leftrightarrow$ K-Means: each data point to 1 class
+		\item Soft-assignment $\Leftrightarrow$ EM Clustering: each data point $\Rightarrow$ \ac{prob} to fall into many classes
+		\item With \hlr{more \ac{param}}, EM \hlr{needs more iteration}.
+	\end{itemize}	
 \end{itemize}
-
-EM \hlr{needs more iteration}, because there are \hlr{more \ac{param}}.
